@@ -1,4 +1,8 @@
-# Commande pour lancer l'application 
+# Commande pour lancer l'application
+
+```bash
+java --module-path <chemin vers le dossier lib de javafx> --add-modules javafx.controls,javafx.fxml -jar G1_SAE3A.jar
+```
 
 # Règles du jeu
 
